# wolfram-app-discovery-rs

./: .rustfmt.toml  Cargo.toml  README.md  build.rs
.github/workflows/: build-executables.yml
docs/: CHANGELOG.md  CommandLineHelp.md  Development.md  Maintenance.md
src/: build_scripts.rs  config.rs  find.rs  lib.rs  tests.rs
src/os/: linux.rs  macos.rs  mod.rs  windows.rs
src/os/macos/: cf_exts.rs
tests/: main.rs
