[package]
name = "wolfram-app-discovery"
version = "0.1.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/WolframResearch/wolfram-app-discovery-rs"
description = "Find local installations of the Wolfram Language"
keywords = ["wolfram", "wolfram-language", "discovery", "mathematica", "wolfram-engine"]
categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
    ".vscode/*",
]

#===================
# Features
#===================

[features]
default = []
cli = ["clap"]

#===================
# Targets
#===================

[[bin]]
name = "wolfram-app-discovery"
required-features = ["cli"]

#===================
# Dependencies
#===================

[dependencies]
cfg-if = "0.1.10"

clap = { version = "3.0.4", features = ["derive"], optional = true }

core-foundation = "0.9.2"