[package]
name = "wolfram-app-discovery"
version = "0.1.2"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/WolframResearch/wolfram-app-discovery-rs"
description = "Find local installations of the Wolfram Language"
keywords = ["wolfram", "wolfram-language", "discovery", "mathematica", "wolfram-engine"]
categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
    ".vscode/*",
]

#===================
# Features
#===================

[features]
default = []
cli = ["clap"]

#===================
# Targets
#===================

[[bin]]
name = "wolfram-app-discovery"
required-features = ["cli"]

#===================
# Dependencies
#===================

[dependencies]
clap = { version = "3.0.4", features = ["derive"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.2"

[target.'cfg(target_os = "windows")'.dependencies]
once_cell = "1.9.0"
# regex = "1.5.4"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.32.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_Storage_FileSystem",
    "Win32_Storage_Packaging_Appx",
]